--- a/Main.ipynb
+++ b/Main.ipynb
@@ -71,7 +71,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Time elapsed for generate_dataset: 271785 msec (0 sec)\n"
+      "Time elapsed: 277972 msec (0 sec)\n"
      ]
     }
    ],
@@ -105,7 +105,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Time elapsed for encrypt: 849430 msec (0 sec)\n"
+      "Time elapsed: 809972 msec (0 sec)\n",
+      "Time elapsed: 824585 msec (0 sec)\n"
      ]
     }
    ],
