Classes map added

--- a/Main.ipynb
+++ b/Main.ipynb
@@ -71,7 +71,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Time elapsed: 277972 msec (0 sec)\n"
+      "Time elapsed: 277592 msec (0 sec)\n"
      ]
     }
    ],
@@ -105,15 +105,24 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Time elapsed: 809972 msec (0 sec)\n",
-      "Time elapsed: 824585 msec (0 sec)\n"
+      "Time elapsed: 824296 msec (0 sec)\n",
+      "Time elapsed: 816472 msec (0 sec)\n",
+      "Time elapsed: 816936 msec (0 sec)\n"
      ]
     }
    ],
    "source": [
     "caesar_3 = Caesar.encrypt(words, 3)\n",
-    "caesar_4 = Caesar.encrypt(words, 4)"
+    "caesar_4 = Caesar.encrypt(words, 4)\n",
+    "caesar_5 = Caesar.encrypt(words, 5)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
