--- a/Main.ipynb
+++ b/Main.ipynb
@@ -83,7 +83,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Time elapsed: 266494 msec (0 sec)\n"
+      "Time elapsed: 267262 msec (0 sec)\n"
      ]
     }
    ],
@@ -117,9 +117,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Time elapsed: 821722 msec (0 sec)\n",
-      "Time elapsed: 817739 msec (0 sec)\n",
-      "Time elapsed: 797837 msec (0 sec)\n"
+      "Time elapsed: 833492 msec (0 sec)\n",
+      "Time elapsed: 845300 msec (0 sec)\n",
+      "Time elapsed: 817205 msec (0 sec)\n"
      ]
     }
    ],
@@ -138,9 +138,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Time elapsed: 820367 msec (0 sec)\n",
-      "Time elapsed: 821371 msec (0 sec)\n",
-      "Time elapsed: 808805 msec (0 sec)\n"
+      "Time elapsed: 811561 msec (0 sec)\n",
+      "Time elapsed: 825007 msec (0 sec)\n",
+      "Time elapsed: 799798 msec (0 sec)\n"
      ]
     }
    ],
@@ -194,9 +194,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Time elapsed: 294339 msec (0 sec)\n",
-      "Time elapsed: 289400 msec (0 sec)\n",
-      "Time elapsed: 284145 msec (0 sec)\n"
+      "Time elapsed: 294931 msec (0 sec)\n",
+      "Time elapsed: 304228 msec (0 sec)\n",
+      "Time elapsed: 321137 msec (0 sec)\n"
      ]
     }
    ],
@@ -215,9 +215,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Time elapsed: 293870 msec (0 sec)\n",
-      "Time elapsed: 284601 msec (0 sec)\n",
-      "Time elapsed: 281473 msec (0 sec)\n"
+      "Time elapsed: 305609 msec (0 sec)\n",
+      "Time elapsed: 292390 msec (0 sec)\n",
+      "Time elapsed: 293059 msec (0 sec)\n"
      ]
     }
    ],
@@ -237,7 +237,9 @@
     "    \"\"\"Helper function. It returns an intersection of \n",
     "    values sets of two dicts.\n",
     "    \"\"\"\n",
-    "    return {value for value in first.values()}.intersection({value for value in second.values()})"
+    "    first_set  = {value for value in first.values()}\n",
+    "    second_set = {value for value in second.values()}\n",
+    "    return first_set.intersection(second_set)"
    ]
   },
   {
@@ -248,7 +250,8 @@
    "source": [
     "# Test helper\n",
     "\n",
-    "assert(calculate_intersection({'a': 97, 'b': 98}, {'c': 99, 'd': 100}) == set())"
+    "assert(calculate_intersection({'a': 97, 'b': 98}, {'c': 99, 'd': 100}) == set())\n",
+    "assert(calculate_intersection({'a': 97, 'b': 99}, {'c': 99, 'd': 100}) == {99})"
    ]
   },
   {
