--- a/Main.ipynb
+++ b/Main.ipynb
@@ -5,7 +5,9 @@
    "metadata": {},
    "source": [
     "# Main module\n",
-    "It is written in Jupyter Noteboook for better look"
+    "It is written in Jupyter Noteboook for better look.\n",
+    "\n",
+    "> **Note**: function 'map_codes_and_words' from Utility.functions uses ***frozendict*** module. To avoid errors and bad mood (bacause of errors) you need to create a cell with python code before any import and type `%pip install frozendict`. Then run your cell."
    ]
   },
   {
@@ -18,26 +20,6 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Requirement already satisfied: frozendict in /home/georgy/Anaconda3/lib/python3.7/site-packages (1.2)\n",
-      "Note: you may need to restart the kernel to use updated packages.\n"
-     ]
-    }
-   ],
-   "source": [
-    "# install frozendict\n",
-    "\n",
-    "%pip install frozendict"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
    "metadata": {
     "scrolled": true
    },
@@ -51,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "scrolled": true
    },
@@ -64,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {
     "scrolled": true
    },
@@ -92,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -100,7 +82,7 @@
      "output_type": "stream",
      "text": [
       "All 6 tests passed\n",
-      "Time elapsed: 0 sec, 161 msec\n"
+      "Time elapsed: 73 msec\n"
      ]
     }
    ],
@@ -119,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {
     "scrolled": true
    },
@@ -128,7 +110,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Time elapsed: 0 sec, 270761 msec\n"
+      "Time elapsed: 283954 msec\n"
      ]
     }
    ],
@@ -138,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {
     "scrolled": true
    },
@@ -157,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {
     "scrolled": true
    },
@@ -166,9 +148,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Time elapsed: 0 sec, 808231 msec\n",
-      "Time elapsed: 0 sec, 804068 msec\n",
-      "Time elapsed: 0 sec, 797858 msec\n"
+      "Time elapsed: 805501 msec\n",
+      "Time elapsed: 802263 msec\n",
+      "Time elapsed: 818928 msec\n"
      ]
     }
    ],
@@ -180,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {
     "scrolled": true
    },
@@ -189,9 +171,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Time elapsed: 0 sec, 836025 msec\n",
-      "Time elapsed: 0 sec, 812870 msec\n",
-      "Time elapsed: 0 sec, 804421 msec\n"
+      "Time elapsed: 817251 msec\n",
+      "Time elapsed: 828446 msec\n",
+      "Time elapsed: 815135 msec\n"
      ]
     }
    ],
@@ -224,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {
     "scrolled": true
    },
@@ -233,9 +215,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Time elapsed: 2 sec, 43238 msec\n",
-      "Time elapsed: 1 sec, 991194 msec\n",
-      "Time elapsed: 2 sec, 6118 msec\n"
+      "Time elapsed: 67591 msec\n",
+      "Time elapsed: 981592 msec\n",
+      "Time elapsed: 18338 msec\n"
      ]
     }
    ],
@@ -247,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {
     "scrolled": true
    },
@@ -256,9 +238,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Time elapsed: 2 sec, 17455 msec\n",
-      "Time elapsed: 1 sec, 984100 msec\n",
-      "Time elapsed: 1 sec, 994658 msec\n"
+      "Time elapsed: 38488 msec\n",
+      "Time elapsed: 984609 msec\n",
+      "Time elapsed: 5490 msec\n"
      ]
     }
    ],
@@ -270,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {
     "scrolled": true
    },
@@ -323,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {
     "scrolled": true
    },
@@ -361,7 +343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {
     "scrolled": false
    },
@@ -394,8 +376,6 @@
     "pos = ax2.imshow(intersections_map, interpolation='mitchell')\n",
     "ax2.set_xticklabels([0] + [label for label in labels])  # 0 is dummy label\n",
     "ax2.set_yticklabels([0] + [label for label in reversed(labels)])\n",
-    "ax2.text(2.20, 5.35, 'Self-intersections and \\nbottom half are replaced \\nwith value {}'.format(placeholder)\n",
-    "         , color='white', size=12)\n",
     "\n",
     "# Mark local minima and maxima on second graph\n",
     "# It is sad, but these numbers are magical :(\n",
@@ -405,11 +385,14 @@
     "ax2.plot(  0, 1, 'yv', 1, 1, 'yv', 2, 2, 'yv'\n",
     "         , 3, 0, 'yv', 4, 0, 'yv')\n",
     "\n",
+    "# Draw plots\n",
     "fig.colorbar(pos, ax=ax2)\n",
     "plt.suptitle(\"Intersections of encrypted word's sets\", size=20)\n",
     "plt.setp(ax2.get_xticklabels(), rotation=30, ha='right', rotation_mode='anchor')\n",
     "ax1.legend()\n",
     "ax2.legend(loc='lower left')\n",
+    "ax2.text(2.20, 5.35, 'Self-intersections and \\nbottom half are replaced \\n'\n",
+    "         'with value {}'.format(placeholder), color='white', size=12)\n",
     "plt.show()"
    ]
   },
@@ -440,14 +423,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Classification\n",
+    "## Classification\n",
     "\n",
     "We have calculated 2 hash values: crc32 and custom one. Now it's time to put everything in Pandas DataFrame."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -458,14 +441,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Time elapsed: 4 sec, 655165 msec\n"
+      "Time elapsed: 480834 msec\n"
      ]
     }
    ],
@@ -475,7 +458,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -508,37 +491,37 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>plqlvfkrrov</td>\n",
-       "      <td>1280662977</td>\n",
-       "      <td>57062</td>\n",
+       "      <td>uhwurjudghg</td>\n",
+       "      <td>842272789</td>\n",
+       "      <td>53481</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>ylccb</td>\n",
-       "      <td>3840766065</td>\n",
-       "      <td>5478</td>\n",
+       "      <td>hyhb</td>\n",
+       "      <td>2322510580</td>\n",
+       "      <td>3092</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>glvrujdqlcdwlrqv</td>\n",
-       "      <td>2596360828</td>\n",
-       "      <td>166407</td>\n",
+       "      <td>xqvsrxvhg</td>\n",
+       "      <td>3432072313</td>\n",
+       "      <td>31425</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>haklelwlrq</td>\n",
-       "      <td>585160563</td>\n",
-       "      <td>42873</td>\n",
+       "      <td>lqeuhdwkhg</td>\n",
+       "      <td>2908749639</td>\n",
+       "      <td>40944</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>phodqrpd</td>\n",
-       "      <td>86869769</td>\n",
-       "      <td>21944</td>\n",
+       "      <td>lvrfolqhv</td>\n",
+       "      <td>3101183146</td>\n",
+       "      <td>31652</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -546,15 +529,15 @@
        "</div>"
       ],
       "text/plain": [
-       "               Word       Crc32    Hash  Class\n",
-       "0       plqlvfkrrov  1280662977   57062      1\n",
-       "1             ylccb  3840766065    5478      1\n",
-       "2  glvrujdqlcdwlrqv  2596360828  166407      1\n",
-       "3        haklelwlrq   585160563   42873      1\n",
-       "4          phodqrpd    86869769   21944      1"
+       "          Word       Crc32   Hash  Class\n",
+       "0  uhwurjudghg   842272789  53481      1\n",
+       "1         hyhb  2322510580   3092      1\n",
+       "2    xqvsrxvhg  3432072313  31425      1\n",
+       "3   lqeuhdwkhg  2908749639  40944      1\n",
+       "4    lvrfolqhv  3101183146  31652      1"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
