--- a/Main.ipynb
+++ b/Main.ipynb
@@ -422,7 +422,7 @@
    "source": [
     "## Classification\n",
     "\n",
-    "We have calculated 2 hash values: crc32 and custom one. Now it's time to vizualize some intersections to find out if it possible to classify words by these numbers."
+    "We have calculated 2 hash values: crc32 and custom one. Now it's time to visualize some intersections to find out if it is possible to classify words by these numbers."
    ]
   },
   {
